# shortify

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
docs/: requirements.txt
docs/source/: conf.py  index.rst  modules.rst  shortify.rst  shortify.services.rst  usage.rst
examples/: clck.py  git.py  isgd.py  shrtcode.py  tinyurl.py
shortify/: __init__.py  __main__.py  abc.py  base.py  cli.py  constants.py  errors.py  exceptions.py
shortify/main/: app.py  cli.py
shortify/services/: clck.py  cleanuri.py  git.py  isgd.py  shrtcode.py  tinyuid.py  tinyurl.py
shorty/: __init__.py  __main__.py  base.py  errors.py
shorty/services/: __init__.py  clck.py  git.py  isgd.py  shrtcode.py  tinyurl.py
