[metadata]
name = shortify
version = attr: shorty.__version__
description = A highly customisable Discord bot
license = MIT License
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = attr: shorty.__author__
author_email = attr: shorty.__email__
url = https://github.com/Dositan/shorty
# project_urls =
    # Documentation = *soon*
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
license_files =
    LICENSE

[options]
packages = find_namespace:
python_requires = >=3.8,<3.9
include_package_data = True
install_requires =
    requests==2.26.0

[options.entry_points]
console_scripts =
    shorty=shorty.__main__:main

[options.packages.find]
include =
    shorty
    shorty.*
